cleared out unnecessary status and code response fields
